# libsrxl2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  demo.sh
.github/workflows/: ci.yml  release.yml
SRXL2_Master/: .gitignore  CMakeLists.txt  README.md  spm_srxl_master.c  spm_srxl_master.h  spm_srxl_master_config.h
SRXL2_Master/examples/: example1_simple_logger.c  example2_telemetry_monitor.c  example3_custom_scheduler.c  example4_device_manager.c
doc/: Bi-Directional SRXL.md  Remote Receiver Interfacing.md  SRXL2 Specification.md  convert.sh  master-analysis.md  msrc-analysis.md  reimplementation-proposal.md
embedded/: README.md
embedded/arduino/: Makefile
embedded/arduino/fc_arduino/: fc_arduino.ino  srxl2_internal.h  srxl2_telemetry.h
embedded/arduino/master_arduino/: master_arduino.ino
embedded/arduino/sniffer_arduino/: sniffer_arduino.ino
embedded/pico/: CMakeLists.txt  battery_pico.c  board_config.h  fc_pico.c  master_pico.c  pio_uart.pio  pio_uart_hal.h  sniffer_pico.c
fakeuart/: fakeuart.c  fakeuart.h
libsrxl2/: srxl2.c  srxl2.h  srxl2_crc_stm32.c  srxl2_crc_table.inc  srxl2_packet.c  srxl2_packet.h  srxl2_telemetry.c  srxl2_telemetry.h
libsrxl2parser/: README.md  srxl2_parser.c  srxl2_parser.h
libtransport/: transport.c  transport.h
programs/: README.md  spm_srxl_config.h  spm_srxl_master_config.h  srxl2_battery_sim.c  srxl2_master_sim.c  srxl2_new_battery_sim.c  srxl2_new_master_sim.c  srxl2_sniffer.c  uart_adapter.h
tests/: scenario_defs.inc  scenario_harness.h  spm_srxl_config.h  spm_srxl_master_config.h  test_crc.c  test_harness.h  test_helpers.c  test_helpers.h  test_master.c  test_parser.c  test_scenarios_legacy.c  test_scenarios_new.c  test_slave.c  test_srxl2_interop.c  test_srxl2_master.c  test_srxl2_packet.c  test_srxl2_slave.c  test_telemetry.c  uart_adapter.h
tools/: serial_read.sh
